--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SUB. DIRECCION DE MONITOREO - DEVIDA</title>
+  <title>DIRECCION DE PROMOCION & MONITOREO - DEVIDA</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="ico.png" />
